creates new 'help' branch to try fixing the wrapping of elements

--- a/css/styles-recipes.css
+++ b/css/styles-recipes.css
@@ -7,10 +7,9 @@
 }
 
 body {
+    box-sizing: border-box;
     padding: 0;
-    height: 100vh;
     margin: 0;
-    padding: 0;
     font-family: 'Helvetica', sans-serif;
     color: #333333;
     background-color: #bbfff0;
@@ -23,7 +22,6 @@ body {
     font-family: "Brush Script MT", cursive;
     font-size: 45px;
     text-align: center;
-    width: auto;
     background-color: #6bffdf;
     padding: 15px;
     margin: 0;
@@ -31,33 +29,27 @@ body {
     border-bottom: solid 2px #333333;
 }
 
+div {
+    display: inline-block;
+    width: 70vw;
+    text-align: left;
+    position: relative;
+    left: 30vw;
+    margin: 0;
+}
+
+p {
+    display: inline-block;
+    max-width: 70vw;
+    padding-left: 10px;
+}
+
 img {
-    display: block;
-    margin: auto;
-    height: auto;
-    width: 500px;
-    border-width: 0 3px 0;
+    width: 30vw;
+    border-width: 0 3px 0 0;
     border-style: solid;
     border-color: #6BFFDF;
-}
-
-p, ul, ol {
-    padding: 10px 35px;
-    margin: 0 2px;
-}
-
-.main-content {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-}
-
-.sub-content-low {
-    height: auto;
-    display: block;
-    padding: 0;
-    text-align: left;
-    background-color: #FFFFFF;
+    position: fixed;
 }
 
 .sub-content-low .title {
@@ -68,13 +60,16 @@ p, ul, ol {
 }
 
 footer {
-    position: relative;
+    text-align: center;
+    display: block;
+    position: absolute;
     bottom: 0;
+    margin: auto;
+    width: 100vw;
     background-color: #bbfff0;
     color: #333333;
-    width: auto;
-    border-radius: 5px 0 0 0;
-    padding: 10px 10px 5px;
+    border-width: 5px 0 0 0;
+    padding: 10px 0 5px;
     border-style: solid;
     border-color: #6BFFDF;
     border-width: 2px 0 0 0;
@@ -83,7 +78,8 @@ footer {
 footer p {
     text-align: center;
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
+    display: block;
 }
 
 a {
